--- a/index.html
+++ b/index.html
@@ -817,7 +817,7 @@
                 <h1 class="page-title">Diamond Price Prediction</h1>
                 <p class="page-subtitle">Accurately estimate diamond prices using advanced machine learning techniques
                 </p>
-                <img src="/static/images/ai-generated-a-diamond-with-a-transparent-background-png.webp" alt="Diamond"
+                <img src="templates\image\ai-generated-a-diamond-with-a-transparent-background-png.webp" alt="Diamond"
                     class="diamond-image">
             </div>
 
@@ -878,7 +878,7 @@
         <div id="prediction-page">
             <div class="header">
                 <h1 class="page-title">Diamond Price Prediction</h1>
-                <img src="/static/images/ai-generated-a-diamond-with-a-transparent-background-png.webp" alt="Diamond"
+                <img src="templates\image\ai-generated-a-diamond-with-a-transparent-background-png.webp" alt="Diamond"
                     class="diamond-image">
             </div>
             
