--- a/index.html
+++ b/index.html
@@ -1053,7 +1053,7 @@
         <div id="how-it-works-page" style="display: none;">
             <div class="header">
                 <h1 class="page-title">How It Works</h1>
-                <img src="/static/images/ai-generated-a-diamond-with-a-transparent-background-png.webp" alt="Diamond" class="diamond-image">
+                <img src="templates\image\ai-generated-a-diamond-with-a-transparent-background-png.webp" alt="Diamond" class="diamond-image">
             </div>
             
             <div class="content-section">
@@ -1137,7 +1137,7 @@
         <div id="faqs-page" style="display: none;">
             <div class="header">
                 <h1 class="page-title">Frequently Asked Questions</h1>
-                <img src="/static/images/ai-generated-a-diamond-with-a-transparent-background-png.webp" alt="Diamond" class="diamond-image">
+                <img src="templates\image\ai-generated-a-diamond-with-a-transparent-background-png.webp" alt="Diamond" class="diamond-image">
             </div>
             
             <div class="faq-container">
